syntax = "proto3";

package protorpc;
option go_package ="../protorpc";
option csharp_namespace = "cspb";  // 给C#提供的选项

message LoginParam {
    string  username    = 1;
    string  password    = 2;
}

message LoginResult {
    uint64  user_id     = 1;
    string  token       = 2;
}
